syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.common.domain.proto";
option java_outer_classname = "ResponsePacketProto";

message ResponsePacket {
  int32 OpCode = 1;
  string AccessToken = 2;
  string InstanceId = 3;
  int32 ResultCode = 4;
  string ResultMessage = 5;
  bytes Data = 6;
}