syntax = "proto3"; 
package Classlink;
option java_package = "com.classlink.websocket.api.system.domain.dto.proto";
option java_outer_classname = "SysWorldInterObjSetCreateResProto";

message SysWorldInterObjSetCreateRes{
    message InteractionObject
    {
        string InteractionObjectCode = 1;
        string  IdxType = 2;
        int32  Idx = 3;
        string  DataType = 4;
        string Data = 5;
    }
    
    repeated InteractionObject InteractionObjectList = 1;
}