syntax = "proto3"; 
package Classlink; 
option java_package = "com.classlink.websocket.api.system.domain.param.proto"; 
option java_outer_classname = "SysWorldInterObjSetPackageCreateReqProto"; 

message SysWorldInterObjSetPackageCreateReq{
string InsCode = 1;
int32 WorldIdx = 2;
}